[gd_scene load_steps=7 format=3 uid="uid://bffmd8v2aatj"]

[ext_resource type="Script" path="res://Scenes/MainScene/player.gd" id="1_u2hrs"]
[ext_resource type="Texture2D" uid="uid://dp0s77m5y3fm6" path="res://Assets/FlyingCar.png" id="2_in2pi"]
[ext_resource type="Texture2D" uid="uid://crkne7ru8031e" path="res://Assets/Muzzle.png" id="3_n4ldi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5niuo"]
size = Vector2(409, 210)

[sub_resource type="Animation" id="Animation_twe1a"]
resource_name = "MuzzleFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xilsa"]
_data = {
"MuzzleFlash": SubResource("Animation_twe1a")
}

[node name="Player" type="CharacterBody2D"]
position = Vector2(338, 182)
script = ExtResource("1_u2hrs")

[node name="SpaceCar" type="Sprite2D" parent="."]
texture = ExtResource("2_in2pi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4.5, 11)
shape = SubResource("RectangleShape2D_5niuo")

[node name="SpawnPosition" type="Marker2D" parent="."]
position = Vector2(216, -15)

[node name="AttackSpeedTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="MuzzleFlash" type="Sprite2D" parent="."]
position = Vector2(248, -10)
rotation = -0.261799
scale = Vector2(10.75, 10.75)
texture = ExtResource("3_n4ldi")
region_enabled = true
region_rect = Rect2(0, 2, 6, 6.72855)

[node name="MuzzleFlashAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xilsa")
}

[connection signal="timeout" from="AttackSpeedTimer" to="." method="_on_attack_speed_timer_timeout"]
